# chatter-box

./: .gitignore  README.md  main.py  pyproject.toml
chatter_box/: audio_capture.py  audio_player.py  chatter_box.py
