[tool.poetry]
name = "chatter-box"
version = "0.1.0"
description = ""
authors = ["Luiz Pereira <luizfper@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
websockets = "^13.1"
pydantic = "^2.9.2"
pyaudio = "^0.2.14"
pydub = "^0.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
